# picoScale

./: .gitignore  .gitmodules  README.md  build_all.sh
src/: CMakeLists.txt  data.c  data.h  hello.c  hx711.c  hx711.h  include.h  main.c  simul.c  simul.h  utils.c  utils.h  ws2812.c
utils/: flash.sh  test_echo.py  test_simul.py
